# eink-power-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CROSS_COMPILE.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  LICENSE  PHASE2_CONTEXT.md  README.md  build-aarch64.sh  dependency-report.md  deploy-target.sh  deploy.sh  dev.sh  docker-compose.yml
.github/workflows/: ci.yml  maintenance.yml
examples/: basic_usage.rs
src/: error.rs  firmware.rs  json.rs  lib.rs  main.rs
src/cli/: mod.rs
src/power/: battery.rs  control.rs  mod.rs
src/serial/: connection.rs  mod.rs  protocol.rs
tests/: integration_tests.rs
